--- a/src/editor.scss
+++ b/src/editor.scss
@@ -1,9 +1,8 @@
-/**
- * The following styles get applied inside the editor only.
- *
- * Replace them with your own styles or remove the file completely.
- */
-
-.wp-block-create-block-boilerplate {
-	border: 1px dotted #f03;
+* {
+	box-sizing: border-box;
 }
+
+// .wp-block-blocks-course-text-box {
+
+
+// }
